--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "hdta-news-personalization",
+  "version": "1.0.0",
+  "description": "How Does This Affect Me - News Personalization Service",
+  "scripts": {
+    "dev": "vercel dev",
+    "build": "vercel build",
+    "deploy": "vercel"
+  },
   "dependencies": {
-    "@upstash/redis": "^1.28.2",
-    "jsdom": "^24.0.0"
+    "@upstash/redis": "^1.28.2"
+  },
+  "devDependencies": {
+    "vercel": "^33.0.0"
   }
 }
