--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "How Does This Affect Me - News Personalization Service",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vercel dev",
     "build": "echo 'No build step required'",
